--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Map/stage_01.stage_01
 EditorStartupMap=/Game/Map/stage_01.stage_01
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
+GameInstanceClass=/Script/KidKing.MyGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
