--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/stage_01.stage_01
+GameDefaultMap=/Game/Map/StartMenu.StartMenu
 EditorStartupMap=/Game/Map/stage_01.stage_01
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Script/KidKing.MyGameInstance
