--- a/KidKing.uproject
+++ b/KidKing.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "ModelViewViewModel",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
