--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,7 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="ShowGameMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Zero)
++ActionMappings=(ActionName="Pause_UI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
