--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,6 +55,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/KidKing")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/KidKing")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="KidKingGameModeBase")
++ActiveClassRedirects=(OldClassName="/Script/KidKing.MyAIController",NewClassName="/Script/KidKing.CustomAIController")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
