Prepare to merge
Changed Class Name

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,6 +55,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/KidKing")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/KidKing")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="KidKingGameModeBase")
++ActiveClassRedirects=(OldClassName="/Script/KidKing.MainCharacter1",NewClassName="/Script/KidKing.MainCharacter")
++ActiveClassRedirects=(OldClassName="/Script/KidKing.MyAnimInstance",NewClassName="/Script/KidKing.CharacterAnimInstance")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
