--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -1,5 +1,8 @@
 [/Script/AdvancedPreviewScene.SharedProfiles]
 
 [/Script/UnrealEd.BlueprintEditorProjectSettings]
+bForceAllDependenciesToRecompile=False
+bValidateUnloadedSoftActorReferences=True
 bEnableChildActorExpansionInTreeView=False
+DefaultChildActorTreeViewMode=ComponentOnly
 
