--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Map/StartMenu.StartMenu
 EditorStartupMap=/Game/Map/stage_01.stage_01
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
-GameInstanceClass=/Script/KidKing.MyGameInstance
+GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
