--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,9 +6,9 @@ ProjectID=E57BDD9A47F193152AE4749102057612
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
+BuildTarget=KidKing
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Dev/Project/KidKing/Package")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -98,12 +98,13 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Map/stage_02")
 +MapsToCook=(FilePath="/Game/Map/Connection")
 +MapsToCook=(FilePath="/Game/Map/CharacterSelection")
++MapsToCook=(FilePath="/Game/Map/ServerEntry")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
-PerPlatformBuildTarget=()
+PerPlatformBuildConfig=(("Windows", PPBC_Development),("HoloLens", PPBC_Development))
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
+PerPlatformBuildTarget=(("Windows", "KidKingServer"))
 
