--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,6 +56,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/KidKing")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/KidKing")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="KidKingGameModeBase")
+AssetManagerClassName=/Script/KidKing.KidKingAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
