--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Pause_UI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pause_UI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=JoyCon_Plus)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
