Test Level에서 서버 테스트, BP_Controller 에서 Input 세팅
서버에 접속할때 Server 측에 존재하는 GameMode에 Character Spawn 및 Possess 요청(Controller BP 안에서)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/Map/ServerEntry.ServerEntry
 EditorStartupMap=/Game/Map/stage_01.stage_01
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
-ServerDefaultMap=/Game/Map/CharacterSelection.CharacterSelection
+ServerDefaultMap=/Game/Map/TestLevel.TestLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
