--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,10 +2,12 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/ServerEntry.ServerEntry
-EditorStartupMap=/Game/Map/stage_01.stage_01
+EditorStartupMap=/Game/Map/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
 ServerDefaultMap=/Game/Map/TestLevel.TestLevel
+bOffsetPlayerGamepadIds=True
+GlobalDefaultServerGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
