--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Pause_UI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="Fireball",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Pause_UI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=JoyCon_Plus)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
