--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/ServerEntry.ServerEntry
+GameDefaultMap=/Game/Map/Connection.Connection
 EditorStartupMap=/Game/Map/stage_01.stage_01
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
