--- a/KidKing.uproject
+++ b/KidKing.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{63661559-41A2-D70C-3D64-259902A56F89}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
