Fixed Error in Stamina Comsumption

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Damaged",DevComment="")
 +GameplayTagList=(Tag="Character.Run",DevComment="")
++GameplayTagList=(Tag="Character.SprintStaminaConsume",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Debug.Stun",DevComment="")
