--- a/KidKing.uproject
+++ b/KidKing.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{CD0F473D-41F4-C46F-7640-088BD3395858}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -43,6 +43,10 @@
 		},
 		{
 			"Name": "AnimToTexture",
+			"Enabled": true
+		},
+		{
+			"Name": "NiagaraFluids",
 			"Enabled": true
 		}
 	]
