--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability",DevComment="")
 +GameplayTagList=(Tag="Ability.Dodge",DevComment="")
++GameplayTagList=(Tag="Ability.Knockback",DevComment="")
 +GameplayTagList=(Tag="Ability.NotCanceledByStun",DevComment="")
 +GameplayTagList=(Tag="Character.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Damaged",DevComment="")
