--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -139,3 +139,5 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Projectile",NewName="Team1")
 
+[CoreRedirects]
++ClassRedirects=(OldName="",NewName="")
