[C++] Character Base Class & Bot Base Class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -140,4 +140,4 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Projectile",NewName="Team1")
 
 [CoreRedirects]
-+ClassRedirects=(OldName="",NewName="")
++ClassRedirects=(OldName="NiceCleanCharacter",NewName="BaseCharacter")
