--- a/KidKing.uproject
+++ b/KidKing.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{9D2992F5-4335-2375-67A0-9DABBAF5FF4A}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
