--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -18,6 +18,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.SprintStaminaConsume",DevComment="")
 +GameplayTagList=(Tag="Character.Walk",DevComment="")
 +GameplayTagList=(Tag="Data.Meteor.Damage",DevComment="")
++GameplayTagList=(Tag="Desh",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Debug.Stun",DevComment="")
