--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,6 +15,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Damaged",DevComment="")
 +GameplayTagList=(Tag="Character.Run",DevComment="")
++GameplayTagList=(Tag="Character.Spiral",DevComment="")
 +GameplayTagList=(Tag="Character.SprintStaminaConsume",DevComment="")
 +GameplayTagList=(Tag="Character.Walk",DevComment="")
 +GameplayTagList=(Tag="Data.Meteor.Damage",DevComment="")
