WIP Cool Down Widget

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,7 +17,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Run",DevComment="")
 +GameplayTagList=(Tag="Character.SprintStaminaConsume",DevComment="")
 +GameplayTagList=(Tag="Character.Walk",DevComment="")
++GameplayTagList=(Tag="Cooldown.Spiral",DevComment="")
 +GameplayTagList=(Tag="Data.Meteor.Damage",DevComment="")
++GameplayTagList=(Tag="Joyce.Spiral",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Debug.Stun",DevComment="")
