--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.NotCanceledByStun",DevComment="")
 +GameplayTagList=(Tag="Character.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Damaged",DevComment="")
++GameplayTagList=(Tag="Character.Dash",DevComment="")
 +GameplayTagList=(Tag="Character.LighteningSphere",DevComment="")
 +GameplayTagList=(Tag="Character.Run",DevComment="")
 +GameplayTagList=(Tag="Character.SaraCombo",DevComment="")
