--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,8 +23,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.SprintStaminaConsume",DevComment="")
 +GameplayTagList=(Tag="Character.Walk",DevComment="")
 +GameplayTagList=(Tag="Character.WaterBall",DevComment="")
++GameplayTagList=(Tag="Cooldown.Slash",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Spiral",DevComment="")
 +GameplayTagList=(Tag="Data.Meteor.Damage",DevComment="")
++GameplayTagList=(Tag="Joyce.Slash",DevComment="")
 +GameplayTagList=(Tag="Joyce.Spiral",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
