--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/Map/ServerEntry.ServerEntry
 EditorStartupMap=/Game/Map/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
-ServerDefaultMap=/Game/Map/TestLevel.TestLevel
+ServerDefaultMap=None
 bOffsetPlayerGamepadIds=True
 GlobalDefaultServerGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 
@@ -141,3 +141,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="NiceCleanCharacter",NewName="BaseCharacter")
+
