--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/KidKing")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="KidKingGameModeBase")
 AssetManagerClassName=/Script/KidKing.KidKingAssetManager
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=120.000000))
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -141,4 +143,9 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="NiceCleanCharacter",NewName="BaseCharacter")
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+MaxSubsteps=12
+MaxSubstepDeltaTime=0.008333
 
