WIP Sync walk speed and animation speed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/ServerEntry.ServerEntry
-EditorStartupMap=/Game/Map/ServerEntry.ServerEntry
+EditorStartupMap=/Game/Map/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/BluePrint/BP_KidKingGameMode.BP_KidKingGameMode_C
 GameInstanceClass=/Game/CharacterSelect/KidKingGameInsatanceBP.KidKingGameInsatanceBP_C
 ServerDefaultMap=None
