--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -34,4 +34,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Debug.Stun",DevComment="")
 +GameplayTagList=(Tag="State.RemoveOnDeath",DevComment="")
++GameplayTagList=(Tag="Test.Buff",DevComment="")
 
