--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Guard",DevComment="")
 +GameplayTagList=(Tag="Ability.Knockback",DevComment="")
 +GameplayTagList=(Tag="Ability.NotCanceledByStun",DevComment="")
++GameplayTagList=(Tag="Buff.Power",DevComment="")
++GameplayTagList=(Tag="Buff.Speed",DevComment="")
 +GameplayTagList=(Tag="Character.Attack",DevComment="")
 +GameplayTagList=(Tag="Character.Damaged",DevComment="")
 +GameplayTagList=(Tag="Character.Dash",DevComment="")
