--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=KidKing
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Dev/Project/KidKing/Package")
+StagingDirectory=(Path="C:/Dev/Project/KidKing/Packaged")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -93,7 +93,7 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Map/stage_01")
++MapsToCook=(FilePath="/Game/Map/Stage_Main")
 +MapsToCook=(FilePath="/Game/Map/ServerEntry")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
@@ -102,5 +102,5 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
 PerPlatformBuildConfig=(("Windows", PPBC_Development),("HoloLens", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=(("Windows", "KidKingServer"))
+PerPlatformBuildTarget=(("Windows", "KidKing"),("Android", "KidKing"))
 
